// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Composition: Auto Completion on Software Keyboard - Android 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "Can't ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`Composition: Auto Completion on Software Keyboard - iOS 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "Can’t ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`Composition: Text Replacement on Software Keyboard (iOS) 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "On my way! ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`Composition: Typing via the Software Keyboard 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "Hello World ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;
